--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
 ShareBooksSystem/.idea/
+ShareBooksSystem/lib/spring-aop-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-aspects-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-beans-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-context-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-context-support-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-core-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-expression-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-instrument-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-instrument-tomcat-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-jdbc-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-jms-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-messaging-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-orm-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-oxm-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-test-4.3.16.RELEASE.jar
+ShareBooksSystem/lib/spring-tx-4.3.16.RELEASE.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/ManagerRegistUser.jsp
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/annotations-api.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/catalina-ant.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/catalina-ha.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/catalina-storeconfig.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/catalina-tribes.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/catalina.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/ecj-4.6.3.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/el-api.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/jasper-el.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/jasper.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/jaspic-api.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/jsp-api.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-api.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-coyote.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-dbcp.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-i18n-es.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-i18n-fr.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-i18n-ja.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-jdbc.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-jni.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-util-scan.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-util.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/tomcat-websocket.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/WEB-INF/lib/websocket-api.jar
+ShareBooksSystem/out/artifacts/ShareBooksSystem_war_exploded/bookUi/
+ShareBooksSystem/web/bookUi/
